[tool.poetry]
name = "pycfr"
version = "0.1.0"
description = "implementation of Counterfactual Regret Minimization in python."
authors = ["river nunu <someone@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pycfr" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 99
select = ["E", "F", "UP", "D"]
fixable = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_cats = true
warn_return_any = true
warn_unused_variables = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
extra_checks = true
ignore_missing_imports = true

[tool.flake8]
ignore = ["W503"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
